--- a/app/src/main/res/layout/fragment_video_player.xml
+++ b/app/src/main/res/layout/fragment_video_player.xml
@@ -16,13 +16,14 @@
 <!--        android:layout_weight="9"-->
 <!--        />-->
 
-    <com.google.android.exoplayer2.video.VideoDecoderGLSurfaceView
+    <com.google.android.exoplayer2.ui.PlayerView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/video_view"
         android:layout_gravity="center"
         android:focusable="true"
-        android:layout_weight="9"/>
+        android:layout_weight="9"
+        />
 
     <RelativeLayout
         android:layout_width="match_parent"
