--- a/app/src/main/res/layout/fragment_viewed_status.xml
+++ b/app/src/main/res/layout/fragment_viewed_status.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".ui.status.ViewedStatusFragment">
 
@@ -11,6 +12,8 @@
         android:layout_height="match_parent"
         android:id="@+id/viewed_status_recycler_view"
         tools:listitem="@layout/viewed_status_layout"
+        android:layout_gravity="center"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         />
 
     <ProgressBar
