--- a/app/src/main/res/layout/saved_status_layout.xml
+++ b/app/src/main/res/layout/saved_status_layout.xml
@@ -1,30 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:gravity="center_vertical"
-    android:layout_margin="1dp"
-    android:id="@+id/saved_status_container"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="4dp"
+    android:layout_gravity="center"
+    app:cardCornerRadius="5dp"
+    android:id="@+id/saved_status_container">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="120dp"
-        android:layout_height="100dp"
-        android:id="@+id/saved_status_img"
-        android:scaleType="centerCrop"
-
-        />
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/saved_status_file_play_btn"
-        android:src="@drawable/ic_play"
-        android:layout_margin="7dp"
-        android:textSize="14sp"
-        android:layout_gravity="center"
-        />
+        android:layout_gravity="center">
 
-</FrameLayout>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:id="@+id/saved_status_img"
+            android:scaleType="centerCrop"
+
+            />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/saved_status_file_play_btn"
+            android:src="@drawable/ic_play"
+            android:layout_margin="7dp"
+            android:textSize="14sp"
+            android:layout_gravity="center"
+            />
+
+    </FrameLayout>
+
+</androidx.cardview.widget.CardView>
