--- a/app/src/main/res/layout/fragment_saved_status.xml
+++ b/app/src/main/res/layout/fragment_saved_status.xml
@@ -6,12 +6,20 @@
     android:orientation="vertical"
     tools:context=".ui.status.SavedStatusFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/saved_status_recycler_view"
-        tools:listitem="@layout/saved_status_layout"
-        />
+        android:id="@+id/saved_status_swipe_refresh">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/saved_status_recycler_view"
+            tools:listitem="@layout/saved_status_layout"
+            />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 
     <ProgressBar
         android:layout_width="wrap_content"
@@ -41,7 +49,8 @@
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-<!--    <include layout="@layout/saved_status_layout"/>-->
+
+    <!--    <include layout="@layout/saved_status_layout"/>-->
 <!--    <include layout="@layout/saved_status_layout"/>-->
 <!--    <include layout="@layout/saved_status_layout"/>-->
 <!--    <include layout="@layout/saved_status_layout"/>-->
