--- a/app/src/main/res/layout/fragment_viewed_status.xml
+++ b/app/src/main/res/layout/fragment_viewed_status.xml
@@ -1,56 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".ui.status.ViewedStatusFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/viewed_status_swipe_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/viewed_status_recycler_view"
-        tools:listitem="@layout/viewed_status_layout"
-        android:layout_gravity="center"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        />
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/viewed_status_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            tools:listitem="@layout/viewed_status_layout" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <ProgressBar
+        android:id="@+id/viewed_status_progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/viewed_status_progress_bar"
         android:layout_gravity="center"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/status_available"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/status_available"
-        android:orientation="vertical"
+        android:layout_gravity="center"
         android:gravity="center"
-        android:padding="20dp"
-        android:layout_gravity="center">
+        android:orientation="vertical"
+        android:padding="20dp">
 
         <ImageView
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:src="@drawable/ic_book"/>
+            android:src="@drawable/ic_book" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="No Status Found"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-<!--    <include layout="@layout/viewed_status_layout"/>-->
-<!--    <include layout="@layout/viewed_status_layout"/>-->
-<!--    <include layout="@layout/viewed_status_layout"/>-->
-<!--    <include layout="@layout/viewed_status_layout"/>-->
-<!--    <include layout="@layout/viewed_status_layout"/>-->
-
+    <!--    <include layout="@layout/viewed_status_layout"/>-->
+    <!--    <include layout="@layout/viewed_status_layout"/>-->
+    <!--    <include layout="@layout/viewed_status_layout"/>-->
+    <!--    <include layout="@layout/viewed_status_layout"/>-->
+    <!--    <include layout="@layout/viewed_status_layout"/>-->
 
 
 </FrameLayout>
