--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,11 +2,11 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:id="@+id/refresh"
-        android:icon="@drawable/ic_refresh"
-        android:title="Refresh"
-        app:showAsAction="always" />
+<!--    <item-->
+<!--        android:id="@+id/refresh"-->
+<!--        android:icon="@drawable/ic_refresh"-->
+<!--        android:title="Refresh"-->
+<!--        app:showAsAction="always" />-->
 
     <item
         android:id="@+id/rate_us"
