--- a/app/src/main/res/layout/viewed_status_layout.xml
+++ b/app/src/main/res/layout/viewed_status_layout.xml
@@ -23,12 +23,32 @@
             />
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:id="@+id/viewed_status_file_play_btn"
             android:src="@drawable/ic_play"
             android:layout_gravity="center"
             />
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:paddingStart="7dp"
+            android:paddingEnd="7dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:background="@color/colorAccent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/viewed_new_status_indicator"
+                android:text="NEW"
+                android:textColor="@color/colorWhite"
+                android:textSize="10sp" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
     </FrameLayout>
 
