--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="colorAccent">@color/colorAccent</item>
 
         <item name="toolbarStyle">@style/StatusGrabberToolBarTheme</item>
-
+        <item name="actionOverflowMenuStyle">@style/StatusGrabberActionOverlayTheme</item>
 
     </style>
 
@@ -20,7 +20,13 @@
         <item name="backgroundColor">@color/colorPrimary</item>
         <item name="background">@color/colorPrimary</item>
         <item name="android:textSize">16sp</item>
-        <item name="paddingStart">35dp</item>
+        <item name="paddingStart">16dp</item>
+        <item name="actionOverflowMenuStyle">@style/StatusGrabberActionOverlayTheme</item>
+    </style>
+
+    <style name="StatusGrabberActionOverlayTheme" parent="Widget.AppCompat.Light.ActionButton.Overflow">
+        <item name="color">@color/colorWhite</item>
+        <item name="iconTint">@color/colorWhite</item>
     </style>
 
 </resources>
