--- a/app/src/main/res/layout/fragment_video_player.xml
+++ b/app/src/main/res/layout/fragment_video_player.xml
@@ -29,11 +29,12 @@
         android:background="@color/colorBlack"
         />
 
-    <RelativeLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorBlack"
         android:layout_gravity="bottom"
+        android:orientation="horizontal"
         android:padding="16dp">
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -42,7 +43,7 @@
             android:id="@+id/share_btn"
             android:orientation="vertical"
             android:gravity="center"
-            android:layout_alignParentStart="true"
+            android:layout_weight="2"
             >
 
             <androidx.appcompat.widget.AppCompatImageView
@@ -67,7 +68,7 @@
             android:id="@+id/save_btn"
             android:orientation="vertical"
             android:gravity="center"
-            android:layout_alignParentEnd="true">
+            android:layout_weight="2">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="wrap_content"
@@ -85,6 +86,6 @@
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
-    </RelativeLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
